syntax = "proto3";
package dymensionxyz.dymension.streamer;


import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "dymension/streamer/stream.proto";

option go_package = "github.com/dymensionxyz/dymension/x/streamer/types";


service Msg {
  rpc CreateGauge(MsgCreateStream) returns (MsgCreateStreamResponse);
}

// MsgCreateGauge creates a gague to distribute rewards to users
message MsgCreateStream {
  // distribute_to show which lock the gauge should distribute to by time
  string distribute_to = 1;
  // coins are coin(s) to be distributed by the gauge
  repeated cosmos.base.v1beta1.Coin coins = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  // start_time is the distribution start time
  google.protobuf.Timestamp start_time = 3 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"timestamp\""
  ];

  string distr_epoch_identifier = 4
  [ (gogoproto.moretags) = "yaml:\"distr_epoch_identifier\"" ];

  // num_epochs_paid_over is the number of epochs distribution will be completed
  // over
  uint64 num_epochs_paid_over = 5;
}

message MsgCreateStreamResponse {}
